Hacer cambio de pantallas con boton funcional

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
         <article>
             <img src="/assets/cuadroInvertir.png" alt="">
-            <img src="/assets/cuadroSimulador.png" alt="">
+            <a href="pantalla2.html">
+                <img src="/assets/cuadroSimulador.png" alt="">
+            </a>
         </article>
     </section>
 
@@ -29,6 +31,5 @@
 
 </div>
 
-    <script src="scripts/homeButton.js"></script>
 </body>
 </html>
