Hacer transicion a pantalla 4

--- a/pantalla4.html
+++ b/pantalla4.html
@@ -15,16 +15,8 @@
             <a href="index.html" class="menu-w">
                 <img src="/assets/menuW.png" alt="">
             </a>
-
-            <a href="pantalla4.html" id="btn-1">
-                <button>¡Continuar!</button>
-            </a>
-    
-            <a href="pantalla4.html" id="btn-2">
-                <button>¡Continuar!</button>
-            </a>
-
-            <img src="/assets/pantallaSelect.png" alt="">
+            <img src="/assets/pantallaPresent.png" alt="">
+            <button id="boton">Continuar</button>
         </div>
     
     </div>
