Renombrar los archivos para entender la secuencia

--- a/pantalla3.html
+++ b/pantalla3.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Selecciona una opción</title>
 
-    <link rel="stylesheet" type="text/css" href="styles/seleccion.css"></head>
+    <link rel="stylesheet" type="text/css" href="styles/pnt3.css"></head>
 <body>
 
     <div class="contenedor">
@@ -16,11 +16,11 @@
                 <img src="/assets/menuW.png" alt="">
             </a>
 
-            <a href="pantalla4.html" id="btn-1">
+            <a href="pantalla4.html" id="btn3-1">
                 <button>¡Continuar!</button>
             </a>
     
-            <a href="pantalla4.html" id="btn-2">
+            <a href="pantalla4.html" id="btn3-2">
                 <button>¡Continuar!</button>
             </a>
 
