--- a/pantalla2.html
+++ b/pantalla2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador</title>
-    <link rel="stylesheet" type="text/css" href="styles/explicacion.css">
+    <link rel="stylesheet" type="text/css" href="styles/pnt2.css">
 </head>
 
 <body>
@@ -23,11 +23,13 @@
         </a>
 
         <img src="/assets/pantallaExpl.png" alt="">
-        <button id="boton">Continuar</button>
+
+        <a href="pantalla3.html">
+            <button id="boton-2">Continuar</button>  
+        </a>
     </div>
 
 </div>
 
-    <script src="scripts/buttonP2.js"></script>
 </body>
 </html>
