--- a/pantalla4.html
+++ b/pantalla4.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenida</title>
 
-    <link rel="stylesheet" type="text/css" href="styles/seleccion.css"></head>
+    <link rel="stylesheet" type="text/css" href="styles/pnt4.css"></head>
 <body>
 
     <div class="contenedor">
@@ -16,7 +16,10 @@
                 <img src="/assets/menuW.png" alt="">
             </a>
             <img src="/assets/pantallaPresent.png" alt="">
-            <button id="boton">Continuar</button>
+
+            <a href="pantalla5.html">
+                <button id="boton-4">Continuar</button>
+            </a>
         </div>
     
     </div>
