Cambiar nombres y añadir pantallas

--- a/pantalla2.html
+++ b/pantalla2.html
@@ -22,7 +22,7 @@
             <img src="/assets/btnAtras.png" alt="">
         </a>
 
-        <img src="/assets/pantallaExpl.png" alt="">
+        <img src="/assets/pantalla2.png" alt="">
 
         <a href="pantalla3.html">
             <button id="boton-2">Continuar</button>  
