--- a/pantalla5.html
+++ b/pantalla5.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nombra tu sueño</title>
+    <link rel="stylesheet" type="text/css" href="styles/pnt5.css"></head>
 </head>
+
 <body>
     
+    <div class="contenedor">
+
+        <div class="fondo">
+            <a href="index.html" class="menu-w">
+                <img src="/assets/menuW.png" alt="">
+            </a>
+            <img src="/assets/pantalla5.png" alt="">
+
+            <input type="text" placeholder="ej: Viaje a Europa" class="input">
+
+            
+                <button id="boton-5">Continuar</button>
+        </div>
+    </div>
+
+
+    <script src="scripts/buttons.js"></script>
 </body>
 </html>
