Finalizar interacción de pantallas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
 
 <div class="contenedor">
+    
+    <a href="index.html" class="menu-w">
+        <img src="/assets/menuW.png" alt="">
+    </a>
+
     <section id="menu-opciones">
         <article>
             <img src="/assets/cuadroSeguros.png" alt="">
