--- a/invitacion.html
+++ b/invitacion.html
@@ -17,18 +17,12 @@
                 <img src="/assets/menuW.png" alt="">
             </a>
 
-            <a href="index.html" class="btn-atras">
-                <p id="font"> &lt; Atrás</p>
-             </a>
+            <img src="/assets/invitacion.png" alt="">
 
-            <img src="/assets/pantalla6.png" alt="">
+                <button class="boton-1">Invitar amigos</button>
 
-            <a href="pantalla7.html">
-                <button class="boton-1">Quiero más información</button>
-            </a>
-
-            <a href="pantalla9.html">
-                <button class="boton-2">Ya sé qué decisión tomar</button>
+            <a href="pantalla4.html">
+                <button class="boton-2"> Agregar después</button>
             </a>
             
 
