--- a/pantalla13.html
+++ b/pantalla13.html
@@ -17,18 +17,14 @@
                 <img src="/assets/menuW.png" alt="">
             </a>
 
-            <a href="index.html" class="btn-atras">
-                <p id="font"> &lt; Atrás</p>
-             </a>
+            <img src="/assets/pantalla13.png" alt="">
 
-            <img src="/assets/pantalla6.png" alt="">
-
-            <a href="pantalla7.html">
-                <button class="boton-1">Quiero más información</button>
+            <a href="pantalla3.html">
+                <button class="boton-1">Seguir invirtiendo</button>
             </a>
 
-            <a href="pantalla9.html">
-                <button class="boton-2">Ya sé qué decisión tomar</button>
+            <a href="index.html">
+                <button class="boton-2"> Regresar al inicio</button>
             </a>
             
 
