--- a/pantalla2.html
+++ b/pantalla2.html
@@ -19,7 +19,7 @@
         </a>
 
         <a href="index.html" class="btn-atras">
-            <img src="/assets/btnAtras.png" alt="">
+           <p id="font"> &lt; Atrás</p>
         </a>
 
         <img src="/assets/pantalla2.png" alt="">
