--- a/pantalla3.1.html
+++ b/pantalla3.1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos de simulaciones</title>
+    <title>Selecciona una opción</title>
 
-    <link rel="stylesheet" type="text/css" href="styles/pnt3.css"></head>
+    <link rel="stylesheet" type="text/css" href="styles/pnt3.1.css"></head>
 <body>
 
     <div class="contenedor">
@@ -20,12 +20,15 @@
                 <p id="font"> &lt; Atrás</p>
              </a>
 
-            <img src="/assets/pantalla3.png" alt="">
+            <img src="/assets/pantalla3.1.png" alt="">
 
-            <a href="pantalla3.1.html">
-                <button  id="btn3-1">¡Continuar!</button>
+            <a href="pantalla4.html">
+                <button  id="btn3-1-1">¡Continuar!</button>
             </a>
-                <button id="btn3-2">¡Continuar!</button>
+
+            <a href="invitacion.html"> 
+                <button id="btn3-1-2">¡Continuar!</button>
+            </a>
 
         </div>
     
