--- a/pantalla5.html
+++ b/pantalla5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nombra tu sueño</title>
-    <link rel="stylesheet" type="text/css" href="styles/pnt5.css"></head>
+    <link rel="stylesheet" type="text/css" href="styles/input.css"></head>
 </head>
 
 <body>
@@ -16,16 +16,23 @@
             <a href="index.html" class="menu-w">
                 <img src="/assets/menuW.png" alt="">
             </a>
+
+            <a href="index.html" class="btn-atras">
+                <p id="font"> &lt; Atrás</p>
+             </a>
+
             <img src="/assets/pantalla5.png" alt="">
 
             <input type="text" placeholder="ej: Viaje a Europa" class="input">
 
-            
-                <button id="boton-5">Continuar</button>
+            <a href="pantalla6.html">
+                <button class="boton-1">Continuar</button>
+            </a>
+
         </div>
     </div>
 
 
-    <script src="scripts/buttons.js"></script>
+
 </body>
 </html>
